# POC-Call-Center

./: .gitignore  README.md  pyproject.toml
docs/: Call_Center-Documenter.pbix  Call_Center.htm  Estatisticas_Dados.csv  Estatisticas_Dados.md  Estatisticas_Dados.xlsx  Medidas_Documentacao.md  claude_geracao_arqs_ipynb.md
docs/AI/: carga_dimensoes.ipynb  carga_tb_ligacoes.ipynb  create_tb_calendario.sql  dim_horas.pq
notebooks/: 0-info-dados.ipynb  1-ingestao_csv_mysql.ipynb  2-carga_dimensoes.ipynb  3-carga_dimensao_ddd_brasil.ipynb  4-carga_fato_ligacoes.ipynb
sql/: sp_create_tb_calendario.sql  sp_create_tb_dados_brutos.sql
